<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employeeData"
        android:drawableStart="@mipmap/ic_launcher"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/emp_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/id"
        android:inputType="text"/>

    <EditText
        android:id="@+id/emp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/employeeName"
        android:inputType="text"/>

    <EditText
        android:id="@+id/emp_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/adress"
        />

    <EditText
        android:id="@+id/emp_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/salary"
        />

    <EditText
        android:id="@+id/emp_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/job"
        />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btnReg"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        android:layout_marginTop="40dp"/>


</LinearLayout>