<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/previewNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/PreviewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DepartmentName"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/PreviewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"/>





</LinearLayout>